package sparks.webui.forms

class BaseDesigner extends Form {

}